# robit_intern_WJY

./: LICENSE  README.md  linux
QT&C++/day1/hw1/: CMakeLists.txt
QT&C++/day1/hw1/include/: Calculation.hpp
QT&C++/day1/hw1/src/: Calculation.cpp  main.cpp
QT&C++/day1/hw2/: CMakeLists.txt
QT&C++/day1/hw2/include/: Points.hpp
QT&C++/day1/hw2/src/: Points.cpp  main.cpp
QT&C++/day1/hw3/: CMakeLists.txt
QT&C++/day1/hw3/include/: Game.hpp
QT&C++/day1/hw3/src/: Game.cpp  main.cpp
QT&C++/day2/hw1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT&C++/day2/hw2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT&C++/day3/hw1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT&C++/day3/hw3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT&C++/day4/hw1/: CMakeLists.txt
ROS/day1/hw2/colcon_ws/install/: local_setup.sh  setup.sh
ROS/day1/hw2/colcon_ws/install/my_first_python_pkg/lib/my_first_python_pkg/: subscriber
ROS/day1/hw2/colcon_ws/install/my_first_python_pkg/share/my_first_python_pkg/: package.sh  package.xml
ROS/day1/hw2/colcon_ws/install/my_first_ros_rclcpp_pkg/lib/my_first_ros_rclcpp_pkg/: publisher_node
ROS/day1/hw2/colcon_ws/install/my_first_ros_rclcpp_pkg/share/my_first_ros_rclcpp_pkg/: local_setup.sh  package.sh
ROS/day1/hw2/colcon_ws/log/: latest_build
ROS/day1/hw2/colcon_ws/src/install/: local_setup.sh  setup.sh
ROS/day1/hw2/colcon_ws/src/install/my_first_python_pkg/lib/my_first_python_pkg/: publisher
ROS/day1/hw2/colcon_ws/src/install/my_first_python_pkg/share/my_first_python_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ROS/day1/hw2/colcon_ws/src/log/: latest_build
ROS/day1/hw2/colcon_ws/src/my_first_python_pkg/: package.xml  setup.cfg  setup.py
ROS/day1/hw2/colcon_ws/src/my_first_ros_rclcpp_pkg/: CMakeLists.txt  package.xml
ROS/day1/hw2/colcon_ws/src/my_first_ros_rclcpp_pkg/include/my_first_ros_rclcpp_pkg/: publisher_node.hpp  subscriber_node.hpp
ROS/day1/hw2/colcon_ws/src/my_first_ros_rclcpp_pkg/src/: publisher_node.cpp  subscriber_node.cpp
ROS/day1/hw3/turtle_draw/: CMakeLists.txt  package.xml
ROS/day1/hw3/turtle_draw/include/turtle_draw/: draw_node.hpp
ROS/day1/hw3/turtle_draw/src/: draw_node.cpp
ROS/day2/hw1/custom_interfaces/: CMakeLists.txt  package.xml
ROS/day2/hw1/hw1/: CMakeLists.txt  package.xml
ROS/day2/hw1/hw1/src/: publisher.cpp  subscriber.cpp
ROS/day2/hw2/: CMakeLists.txt  ROS day2_hw2.docx  package.xml
ROS/day2/hw2/include/turtle_gui/: mainwindow.hpp
ROS/day2/hw2/resource/: mainwindow.ui
ROS/day2/hw2/src/: main.cpp  mainwindow.cpp
ROS/day2/hw3/: CMakeLists.txt  ROS day2_hw3.docx  package.xml
ROS/day2/hw3/include/communicator/: mainwindow.hpp  qnode.hpp
ROS/day2/hw3/resource/: mainwindow.ui
ROS/day2/hw3/src/: main.cpp  mainwindow.cpp  qnode.cpp
ROS/day2/hw4/: CMakeLists.txt
ROS/day2/hw4/include/robot_arm_gui/: mainwindow.h
ROS/day2/hw4/src/: mainwindow.cpp
ROS/day3/hw1/cpp_parameters/: package.xml
ROS/day3/hw2/: turtlesim_robotarm_launch.yaml
ROS/day3/hw2/robot_arm_gui/: CMakeLists.txt  package.xml
ROS/day3/hw2/robot_arm_gui/include/robot_arm_gui/: mainwindow.h
ROS/day3/hw2/robot_arm_gui/launch/: robotarm_launch.yaml
ROS/day3/hw2/robot_arm_gui/src/: main.cpp  mainwindow.cpp  mainwindow.ui
ROS/day4/hw1/life_qos/: CMakeLists.txt  package.xml
ROS/day4/hw1/life_qos/launch/: life_qos_launch.yaml
ROS/day4/hw1/life_qos/src/: lifecycle_listener.cpp  lifecycle_service_client.cpp  lifecycle_talker.cpp
ROS/day4/hw2/ds4/: CMakeLists.txt  package.xml
ROS/day4/hw2/ds4/launch/: ds4_launch.yaml
ROS/day4/hw2/ds4/src/: ds4.cpp
ROS/day4/hw2/joysim/: CMakeLists.txt  package.xml
ROS/day4/hw2/joysim/launch/: joysim_launch.yaml
ROS/day4/hw2/joysim/log/: latest_build
ROS/day4/hw2/joysim/src/: joysim.cpp
project_9.9.20.57/: mainwindow.cpp
