<?xml version="1.0"?>
<package format="3">
  <name>communicator</name>
  <version>0.0.0</version>
  <description>Qt6 GUI for controlling 3DOF robot arm with ROS2</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>qt6-base-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

