<?xml version="1.0"?>
<package format="3">
  <name>vector_pubsub</name>
  <version>0.0.0</version>
  <description>Vector publisher/subscriber example</description>
  <maintainer email="jy@example.com">jy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>custom_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

