<?xml version="1.0"?>
<package format="3">
  <name>joysim</name>
  <version>0.0.1</version>
  <description>Joystick simulator package for ROS 2</description>

 
  <maintainer email="you@example.com">Your Name</maintainer>

 
  <license>Apache-2.0</license>

  
  <buildtool_depend>ament_cmake</buildtool_depend>

 
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

